added first_weekend blog post

--- a/layouts/shortcodes/imgresize.html
+++ b/layouts/shortcodes/imgresize.html
@@ -3,4 +3,5 @@
 {{ .Scratch.Set "image" ($original.Fit $options) }}
 {{ $image := .Scratch.Get "image" }}
 {{ $title := .Get 2 }}
+resized image:
 <img src="{{ $image.RelPermalink }}" width="{{ $image.Width }}" height="{{ $image.Height }}" alt="{{ $title }}">
